--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.7.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
