--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
     "react-simple-typewriter": "^5.0.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
