--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
+    "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.9"
