--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.7",
     "aos": "^2.3.4",
     "axios": "^1.7.3",
+    "firebase": "^10.12.5",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
