--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
     "react-scroll-trigger": "^0.6.14",
