--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.26.0",
     "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
+    "react-slider": "^2.0.6",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.9"
   },
