--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@smastrom/react-rating": "^1.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
@@ -21,6 +22,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-awesome-stars-rating": "^0.16.2",
     "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -30,6 +32,7 @@
     "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
+    "react-star-rating-input": "^8.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9"
