--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
+    "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
     "react-slider": "^2.0.6",
