--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@smastrom/react-rating": "^1.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
@@ -28,6 +29,7 @@
     "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.13.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
