--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-star-rating-input": "^8.0.1",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.4",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
